# boolean_expression

./: .gitignore  LICENSE  Makefile  README.md  boolean_expression.py  pyproject.toml  tox.ini
boolean_expression/: __init__.py
